CP-LHRMAP-001: keep Ride map activity Android-runtime compatible